--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+    
+</head>
   <body>
     Units
     <select>
@@ -62,6 +66,12 @@
         <td><input type="number"></td>
       </tr>
     </table>
+    <script>
+      $=require('jquery');
+      $( document ).ready(function() {
+        alert('hi')
+      });
+    </script>
 </body>
 
 </html>
