--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,7 @@
         
       });
       function addPump() {      
-        alert('hi');
+        $('table tr').first().append('<th>HI</th>');
       }
     </script>
   </body>
