--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
       });
       function addPump() {      
         $('table tr').each(function (i,e) {
-          $(e).append($(e).children().last().copy());
+          $(e).append($(e).children().last().clone());
         });
       }
     </script>
