--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
     <hr>          
     <table>
       <tr>
-        <th/><th>A</th><th class='hover' onclick="addPump()"> + </th>
+        <th/><th>1</th><th class='hover' onclick="addPump()"> + </th>
       <tr>
       <tr>
         <td>Pump RPM</td><td><input type="number"></td>
@@ -66,7 +66,9 @@
       });
       function addPump() {      
         $('table tr').each(function (i,e) {
-          $(e).append($(e).children().last().clone());
+          var last = $(e).children().last();
+          $(e).append(last.clone());
+          last.text(last.index()  );
         });
       }
     </script>
