--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,22 @@
         <td>Number Stages</td>
         <td><input type="number"></td>
       </tr>
+      <tr>
+        <td><hr></td><td></td>
+      </tr>
+      <tr>
+        <td>Pump efficiency</td><td/>
+      </tr>
+      <tr>
+        <td>Motor rated power</td><td/>
+      </tr>
+      <tr>
+        <td>Motor shaft power</td><td/>
+      </tr>
+      <tr>
+        <td>Pump shaft power</td><td/>
+      </tr>
+
     </table>
     <script>
       $ = require('jquery');
