--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
         <th/><th>1</th><th class='hover' onclick="addPump()"> + </th>
       <tr>
       <tr>
-        <td>Pump RPM</td><td><input type="number"></td>
+        <td>Pump RPM</td><td><input type="number" value="1780"></td>
       </tr>
       <tr>
         <td>Drive</td>
@@ -49,30 +49,30 @@
       </tr>
       <tr>
         <td>Kinematic Viscosity (cS)</td>
-        <td><input type="number"></td>
+        <td><input type="number" value="1.00"></td>
       </tr>
       <tr>
         <td>Specific Gravity</td>
-        <td><input type="number"></td>
+        <td><input type="number" value="1.000"></td>
       </tr>
       <tr>
         <td>Number Stages</td>
-        <td><input type="number"></td>
+        <td><input type="number" value="1"></td>
       </tr>
       <tr>
         <td><hr></td><td></td>
       </tr>
       <tr>
-        <td>Pump efficiency</td><td/>
+        <td>Pump efficiency</td><td>72.6 (84.8)</td>
       </tr>
       <tr>
-        <td>Motor rated power</td><td/>
+        <td>Motor rated power</td><td>200 (200)</td>
       </tr>
       <tr>
-        <td>Motor shaft power</td><td/>
+        <td>Motor shaft power</td><td>192.4 (164.8)</td>
       </tr>
       <tr>
-        <td>Pump shaft power</td><td/>
+        <td>Pump shaft power</td><td>192.4 (164.8)</td>
       </tr>
 
     </table>
