--- a/app/index.html
+++ b/app/index.html
@@ -60,6 +60,93 @@
         <td><input type="number" value="1"></td>
       </tr>
       <tr>
+        <td>Fixed specific speed?</td>
+        <td><input type="checkbox"></td>
+      </tr>
+      <tr>
+        <td>Line freq</td>
+        <td> 
+          <select style='width:100%'>
+            <option>50 Hz</option>
+            <option selected>60 Hz</option>
+          </select>
+        </td>
+      </tr>      
+      <tr>
+        <td>Horsepower</td>
+        <td><input type="number" value="200"></td>
+      </tr>
+      <tr>
+        <td>Motor rpm</td>
+        <td><input type="number" value="1780"></td>
+      </tr>
+      <tr>
+        <td>Efficiency class</td>
+        <td> 
+          <select style='width:100%'>
+            <option>Standard efficiency</option>
+            <option selected>Energy efficient</option>
+            <option>Average</option>
+            <option>Specified (DO WE NEED?)</option>
+          </select>
+        </td>
+      </tr>    
+      <tr>
+        <td>Voltage</td>
+        <td><input type="number" value="460"></td>
+      </tr>
+
+
+      <tr>
+        <td>Full-load amps</td>
+        <td><input type="button" value="EST"><input type="number" value="225.4"></td>
+      </tr>
+
+      <tr>
+        <td>Size margin</td>
+        <td><input type="number" value="0"></td>
+      </tr>
+
+      <tr>
+        <td>Operating fraction</td>
+        <td><input type="number" value="1.000"></td>
+      </tr>
+     <tr>
+        <td>$ / kwhr</td>
+        <td><input type="number" value=".0500"></td>
+      </tr>
+      <tr>
+        <td>Flow rate, gpm</td>
+        <td><input type="number" value="2000"></td>
+      </tr>
+      <tr>
+        <td>$ / kwhr</td>
+        <td><input type="number" value=".0500"></td>
+      </tr>     
+      <tr>
+        <td>Head, ft</td>
+        <td><input type="number" value="277"></td>
+      </tr>       
+      <tr>
+        <td>Load estimate method</td>
+        <td> 
+          <select style='width:100%'>
+            <option>Power</option>
+            <option>Curent</option>
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <td>Motor kW</td>
+        <td><input type="number" value="150"></td>
+      </tr>
+
+      <tr>
+        <td>Voltage</td>
+        <td><input type="number" value="460"></td>
+      </tr>
+
+      <tr>
         <td><hr></td><td></td>
       </tr>
       <tr>
