--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,8 @@
         color: green;
       }
       button {
-        border-width: 2px;
+        /*border-width: 2px;*/
+        color: dodgerblue;
       }
       
       input {
