--- a/app/index.html
+++ b/app/index.html
@@ -178,7 +178,7 @@
         </tr>     
         <tr>
           <td>Head, ft</td>
-          <td><input type="number" value="277"></td>
+          <td><input type="number" value="277"><button onclick='headTool()'>TOOL</button></td>
         </tr>       
         <tr>
           <td>Load estimate method</td>
@@ -253,6 +253,9 @@
       $(document).ready(function() {
         
       });
+      function headTool() {
+        $('body').empty().append('<h1>Head Tool Stuff</h1>');
+      }
       function addPump() {      
         $('table tr').each(function (i,e) {
           var last = $(e).children().last();
