--- a/app/index.html
+++ b/app/index.html
@@ -176,7 +176,7 @@
         </tr>        
         <tr>
           <td>Flow rate, gpm</td>
-          <td><input type="number" value="2000" onblur="pumpEff($(this).val())"></td>
+          <td><input type="number" value="2000" onchange="pumpEff($(this).val())"></td>
         </tr>
         <tr>
           <td>$ / kwhr</td>
