--- a/headtool.html
+++ b/headtool.html
@@ -1,5 +1,6 @@
-<h1 onclick='backToCond()'>Hello</h1>
-I'm a great tool!
+<h1 >Hello</h1>
+<p>I'm a great tool!</p>
+<button onclick='BackToCond()'>BACK</button>
 <script>
 
 </script>
