--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       button {
         color: dodgerblue;
       }
+      button:hover {
+        /*border-color: blue;*/
+      }
       input {
         padding: .5em;
         border: solid 1px #fff;
