--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
         font-family: sans-serif;
         font-size: 14pt;
       }
+      body {
+        padding:2.5% 5%;
+        background-color: ghostwhite;
+        /*margin:auto;*/
+      }
       .hover:hover, button:hover {
         cursor: pointer;
         
