--- a/conditions.html
+++ b/conditions.html
@@ -67,7 +67,7 @@ Pump Style
 <table>
   <thead>
     <tr>
-      <th>Pump</th><th class='hover' onclick="notes(this)">1</th><th class='hover' onclick="addPump()"> + </th>
+      <th>Pump</th><th class='hover' onclick="notes(this)"><button>1</button></th><th class='hover' onclick="addPump()"><button>+</button></th>
     </tr>
   </thead>
   <tbody>
@@ -247,7 +247,7 @@ Pump Style
       var last = $(e).children().last();
       $(e).append(last.clone());
       if (i==0) {
-        last.replaceWith($('<th class=hover onclick="notes(this)">').text(last.index()));
+        last.replaceWith($('<th class=hover onclick="notes(this)"><button>'+last.index()+'</button></th>'));
         //last.replaceWith($('<th>').text(last.index()));
          
       }
