--- a/notes.html
+++ b/notes.html
@@ -18,8 +18,8 @@
 <h1>Notes</h1>
 Date<br>
 <input type=date/><br>
-Facily<br>
-<input><br>
+Facility<br>
+<input name=facility><br>
 System<br>
 <input><br>
 Application<br>
@@ -27,6 +27,16 @@ Application<br>
 Evaluator<br>
 <input><br>
 Comments<br>
-<textarea rows=10 cols=100/><br>
-<button onclick='BackToCond()'>CANCEL</button> <button onclick='BackToCond()'>SAVE</button>
+<textarea name='comment' rows=10 cols=100/><br>
+<button onclick='BackToCond()'>CANCEL</button> <button onclick='save()'>SAVE</button>
+<script>
+	$('[name=comment').val(localStorage.getItem('comment'));	
+	function save() {
+		localStorage.setItem('comment',$('[name=comment').val());
+		localStorage.setItem('comment',$('[name=facility').val());
+
+		BackToCond();
+	}
+	
+</script>
 
