--- a/headtool.html
+++ b/headtool.html
@@ -52,7 +52,7 @@ Estimated discharge friction head<br>
 <input style='background-color: lightgray' class=result disabled="" type=number/> <em>ft</em><br>
 
 
-<button onclick='BackToCond()'>CANCEL</button> <button onclick='BackToCond()'>ACCEPT</button>
+<button onclick='Back()'>CANCEL</button> <button onclick='Back()'>ACCEPT</button>
 <script>
 
 </script>
