--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
       Bridge = require('./build/Release/bridge');
 
       $(document).ready(function() {
-        $('body').load('conditions.html');
+        $('body').load('details.html');
       });
       
-      function BackToCond() {
-        $('body').html(Cond);
+      function Back() {
+        $('body').html(Main);
       }
     </script>
   </head>
